--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.release>17</maven.compiler.release>
+    <junit-platform-suite.version>1.11.0</junit-platform-suite.version>
+    <junit-jupiter.version>5.11.0</junit-jupiter.version>
   </properties>
 
   <dependencyManagement>
@@ -27,7 +29,22 @@
   </dependencyManagement>
 
   <dependencies>
-	  
+
+    <dependency>
+      <groupId>org.junit.platform</groupId>
+      <artifactId>junit-platform-suite</artifactId>
+      <version>${junit-platform-suite.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!--  Test runner for jUnit 5 -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>${junit-jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
