--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,13 @@
       <artifactId>junit-jupiter-api</artifactId>
       <scope>test</scope>
     </dependency>
-    
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>uk.org.webcompere</groupId>
       <artifactId>system-stubs-jupiter</artifactId>
@@ -41,7 +47,7 @@
       <scope>test</scope>
 	</dependency>
 
-    
+
   </dependencies>
 
 </project>
